--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -1,12 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3e67a97-6728-44b0-98c3-6be5abfd4343",
+   "cell_type": "markdown",
+   "id": "f5a43f59-5797-4ba9-985c-252c26cb199a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### __Hyperparameter Tuning Experiment - GridSearchCV__\n",
+    "> - Test GradSearch on classification data & models\n",
+    "> - The following is tested:\n",
+    "    * Running Time\n",
+    "    * Best Parameters Determined\n",
+    "    * Performance Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deebaf5f-f0e8-4dc5-b44c-08376e515b38",
+   "metadata": {},
+   "source": [
+    "#### Reference Links:\n",
+    "> - https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -14,7 +28,77 @@
    "id": "7488670d-cfab-41a3-8c86-9e4a50cc485b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import the required packages here\n",
+    "# import libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import io\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "import datetime as dt\n",
+    "import time\n",
+    "from collections import Counter\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "# import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "#plt.imshow(mpimg.imread('jan_aug_tempanom.png'))\n",
+    "\n",
+    "# import seaborn\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# import plotly graph objects\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.express as px\n",
+    "\n",
+    "\n",
+    "# import scipy.cluster.hierarchy\n",
+    "import scipy\n",
+    "import scipy.linalg as la\n",
+    "import scipy.cluster.hierarchy as sch\n",
+    "from scipy.cluster.vq import whiten, kmeans, vq\n",
+    "from scipy.stats import multivariate_normal\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import sklearn.model_selection as model_selection\n",
+    "import sklearn.model_selection as cross_validation\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    "import sklearn.metrics as metrics\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import log_loss\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import plot_roc_curve\n",
+    "from sklearn.metrics import average_precision_score, f1_score, classification_report\n",
+    "from sklearn.metrics import plot_precision_recall_curve, plot_confusion_matrix\n",
+    "from sklearn import linear_model, datasets\n",
+    "from sklearn.linear_model import LinearRegression, Ridge\n",
+    "from sklearn.linear_model import LogisticRegression, RidgeClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier \n",
+    "\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "#for showing 2D plot\n",
+    "%matplotlib inline \n",
+    "\n",
+    "# to be able to see multiple ouputs from sungle cell\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
   },
   {
    "cell_type": "code",
