--- a/src/classification_halvinggrid.ipynb
+++ b/src/classification_halvinggrid.ipynb
@@ -14,7 +14,77 @@
    "id": "7488670d-cfab-41a3-8c86-9e4a50cc485b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import the required packages here\n",
+    "# import libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import io\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "import datetime as dt\n",
+    "import time\n",
+    "from collections import Counter\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "# import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "#plt.imshow(mpimg.imread('jan_aug_tempanom.png'))\n",
+    "\n",
+    "# import seaborn\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# import plotly graph objects\n",
+    "import plotly.graph_objs as go\n",
+    "import plotly.express as px\n",
+    "\n",
+    "\n",
+    "# import scipy.cluster.hierarchy\n",
+    "import scipy\n",
+    "import scipy.linalg as la\n",
+    "import scipy.cluster.hierarchy as sch\n",
+    "from scipy.cluster.vq import whiten, kmeans, vq\n",
+    "from scipy.stats import multivariate_normal\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import sklearn.model_selection as model_selection\n",
+    "import sklearn.model_selection as cross_validation\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    "import sklearn.metrics as metrics\n",
+    "from sklearn.tree import DecisionTreeClassifier \n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import log_loss\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import plot_roc_curve\n",
+    "from sklearn.metrics import average_precision_score, f1_score, classification_report\n",
+    "from sklearn.metrics import plot_precision_recall_curve, plot_confusion_matrix\n",
+    "from sklearn import linear_model, datasets\n",
+    "from sklearn.linear_model import LinearRegression, Ridge\n",
+    "from sklearn.linear_model import LogisticRegression, RidgeClassifier\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "#for showing 2D plot\n",
+    "%matplotlib inline \n",
+    "\n",
+    "# to be able to see multiple ouputs from sungle cell\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\""
+   ]
   },
   {
    "cell_type": "code",
