minor update on grid search code

--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -31,7 +31,8 @@
     "> - https://stackoverflow.com/questions/43214978/seaborn-barplot-displaying-values\n",
     "> - https://medium.com/aiplusoau/hyperparameter-tuning-a5fe69d2a6c7\n",
     "> - https://www.kaggle.com/code/prashant111/catboost-classifier-in-python/notebook\n",
-    "> - https://catboost.ai/en/docs/concepts/python-reference_catboostclassifier_grid_search\n"
+    "> - https://catboost.ai/en/docs/concepts/python-reference_catboostclassifier_grid_search\n",
+    "> - https://towardsdatascience.com/logistic-regression-model-tuning-with-scikit-learn-part-1-425142e01af5\n"
    ]
   },
   {
@@ -1151,16 +1152,17 @@
    "source": [
     "### __1st Set - GridSearchCV:__\n",
     "\n",
-    "#### Scaled Data without PCA: Logistic Regression, Random Forest, XGBoost"
+    "#### Scaled Data without PCA: Logistic Regression, Random Forest, XGBoost\n",
+    "> - Logistic Regression: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4751fdd3-82e0-4b39-9d66-670c512b07d3",
+   "cell_type": "markdown",
+   "id": "eea3364e-788e-4fe8-9409-2916911b43db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Test 1: Logistic Regression"
+   ]
   },
   {
    "cell_type": "code",
@@ -1168,7 +1170,27 @@
    "id": "87164f95-2a57-4d03-83c6-cc82d2fdaf01",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create first pipeline for base.\n",
+    "\n",
+    "pipe = Pipeline([('classifier' , LogisticRegression())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid = [\n",
+    "    {'classifier' : [LogisticRegression()],\n",
+    "     'classifier__penalty' : ['l1', 'l2'],\n",
+    "    'classifier__C' : np.logspace(-4, 4, 20),\n",
+    "    'classifier__solver' : ['liblinear']}\n",
+    "]\n",
+    "\n",
+    "# Create grid search object\n",
+    "\n",
+    "clf = GridSearchCV(pipe, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1)\n",
+    "\n",
+    "# Fit on data\n",
+    "\n",
+    "best_clf = clf.fit(X_train2, y_train2)"
+   ]
   },
   {
    "cell_type": "code",
