update gridsearch code - wip

--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7488670d-cfab-41a3-8c86-9e4a50cc485b",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dffd84d8-8189-44a0-a128-93c23cebd4c9",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1050,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.004022359848022461 seconds ---\n"
+      "--- 0.003988981246948242 seconds ---\n"
      ]
     }
    ],
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "92b80f78-4b8b-4ce5-9703-3b85480f1ae5",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.010527372360229492 seconds ---\n"
+      "--- 0.008983850479125977 seconds ---\n"
      ]
     }
    ],
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "fc8d0e10-0b68-4226-b9c4-9f6ba0636f5e",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.006702423095703125 seconds ---\n"
+      "--- 0.0012781620025634766 seconds ---\n"
      ]
     }
    ],
@@ -1172,20 +1172,19 @@
    "outputs": [],
    "source": [
     "# Create first pipeline for base.\n",
-    "\n",
-    "pipe = Pipeline([('classifier' , LogisticRegression())])\n",
+    "pipe_lg = Pipeline([('classifier' , LogisticRegression())])\n",
     "\n",
     "# Create param grid.\n",
     "param_grid = [\n",
     "    {'classifier' : [LogisticRegression()],\n",
     "     'classifier__penalty' : ['l1', 'l2'],\n",
     "    'classifier__C' : np.logspace(-4, 4, 20),\n",
-    "    'classifier__solver' : ['liblinear']}\n",
+    "    'classifier__solver' : ['liblinear', 'saga', 'lbfgs']}\n",
     "]\n",
     "\n",
     "# Create grid search object\n",
     "\n",
-    "clf = GridSearchCV(pipe, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1)\n",
+    "clf = GridSearchCV(pipe_lg, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1)\n",
     "\n",
     "# Fit on data\n",
     "\n",
