gridsearech - logsiticR & random forest

--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -24,6 +24,9 @@
    "source": [
     "#### Reference Links:\n",
     "> - https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
+    "> - https://scikit-learn.org/stable/modules/model_evaluation.html\n",
+    "> - https://towardsdatascience.com/gridsearchcv-for-beginners-db48a90114ee\n",
+    "\n",
     "> - https://stackoverflow.com/questions/39409866/correlation-heatmap\n",
     "> - https://datascience.stackexchange.com/questions/17540/make-seaborn-heatmap-bigger\n",
     "> - https://machinelearningmastery.com/standardscaler-and-minmaxscaler-transforms-in-python/\n",
@@ -32,7 +35,8 @@
     "> - https://medium.com/aiplusoau/hyperparameter-tuning-a5fe69d2a6c7\n",
     "> - https://www.kaggle.com/code/prashant111/catboost-classifier-in-python/notebook\n",
     "> - https://catboost.ai/en/docs/concepts/python-reference_catboostclassifier_grid_search\n",
-    "> - https://towardsdatascience.com/logistic-regression-model-tuning-with-scikit-learn-part-1-425142e01af5\n"
+    "> - https://towardsdatascience.com/logistic-regression-model-tuning-with-scikit-learn-part-1-425142e01af5\n",
+    "> - https://towardsdatascience.com/hyperparameter-tuning-the-random-forest-in-python-using-scikit-learn-28d2aa77dd74\n"
    ]
   },
   {
@@ -1050,7 +1054,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.003988981246948242 seconds ---\n"
+      "--- 0.003989696502685547 seconds ---\n"
      ]
     }
    ],
@@ -1096,7 +1100,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.008983850479125977 seconds ---\n"
+      "--- 0.009271860122680664 seconds ---\n"
      ]
     }
    ],
@@ -1128,7 +1132,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0012781620025634766 seconds ---\n"
+      "--- 0.0009832382202148438 seconds ---\n"
      ]
     }
    ],
@@ -1153,7 +1157,8 @@
     "### __1st Set - GridSearchCV:__\n",
     "\n",
     "#### Scaled Data without PCA: Logistic Regression, Random Forest, XGBoost\n",
-    "> - Logistic Regression: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html"
+    "> - Logistic Regression: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
+    "> - Random Foreat: https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n"
    ]
   },
   {
@@ -1166,46 +1171,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "87164f95-2a57-4d03-83c6-cc82d2fdaf01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 980 candidates, totalling 4900 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hnico\\anaconda3\\envs\\jupyterlab_3.3.2\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=Pipeline(steps=[('classifier', LogisticRegression())]),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid=[{'classifier__C': [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0,\n",
+       "                                            100.0],\n",
+       "                          'classifier__max_iter': [50, 100, 150, 200, 250],\n",
+       "                          'classifier__penalty': ['l1', 'l2'],\n",
+       "                          'classifier__random_state': [5, 10, 20, 30, 40, 50,\n",
+       "                                                       80],\n",
+       "                          'classifier__solver': ['liblinear', 'saga']}],\n",
+       "             scoring='f1', verbose=True)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__C': 100.0,\n",
+       " 'classifier__max_iter': 200,\n",
+       " 'classifier__penalty': 'l2',\n",
+       " 'classifier__random_state': 5,\n",
+       " 'classifier__solver': 'saga'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "939"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9755206022719636"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9788732394366197"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "--- 8.355851650238037 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
     "# Create first pipeline for base.\n",
     "pipe_lg = Pipeline([('classifier' , LogisticRegression())])\n",
     "\n",
     "# Create param grid.\n",
+    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0]\n",
+    "\n",
     "param_grid = [\n",
-    "    {'classifier' : [LogisticRegression()],\n",
-    "     'classifier__penalty' : ['l1', 'l2'],\n",
-    "    'classifier__C' : np.logspace(-4, 4, 20),\n",
-    "    'classifier__solver' : ['liblinear', 'saga', 'lbfgs']}\n",
+    "    {'classifier__penalty' : ['l1', 'l2'],\n",
+    "    'classifier__C' : param_range,\n",
+    "     'classifier__max_iter': [50, 100, 150, 200, 250],\n",
+    "     'classifier__random_state': [5, 10, 20, 30, 40, 50, 80],\n",
+    "    'classifier__solver' : ['liblinear', 'saga']}\n",
     "]\n",
     "\n",
     "# Create grid search object\n",
-    "\n",
-    "clf = GridSearchCV(pipe_lg, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1)\n",
+    "grid_model_lg = GridSearchCV(pipe_lg, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
     "\n",
     "# Fit on data\n",
+    "grid_model_lg.fit(X_train2, y_train2)\n",
     "\n",
-    "best_clf = clf.fit(X_train2, y_train2)"
+    "# find best model score\n",
+    "grid_model_lg.best_params_\n",
+    "grid_model_lg.best_index_\n",
+    "grid_model_lg.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_lg.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c2f6513-e1ff-4b3e-875c-116dab6b3202",
+   "cell_type": "markdown",
+   "id": "e8071d08-e4ba-436c-a339-526244421d42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Test 2: Random Forest"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e0ace9a8-3360-444a-b985-aa3a88a2cc9b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 83160 candidates, totalling 415800 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "pipe_rf = Pipeline([('classifier' , RandomForestClassifier())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0]\n",
+    "\n",
+    "param_grid_rf = [\n",
+    "    {'classifier__n_estimators': \n",
+    "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
+    "    'classifier__criterion' : ['gini', 'entropy'],\n",
+    "     'classifier__max_features': ['auto', 'sqrt', 'log2'],\n",
+    "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)],\n",
+    "     'classifier__min_samples_split': [2, 5, 10],\n",
+    "     'classifier__min_samples_leaf': [1, 2, 4],\n",
+    "     'classifier__random_state': [5, 10, 20, 30, 40, 50, 80],\n",
+    "    'classifier__bootstrap' : [True, False]}\n",
+    "]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_rf = GridSearchCV(pipe_rf, param_grid = param_grid_rf, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_rf.fit(X_train2, y_train2)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.best_params_\n",
+    "grid_model_rf.best_index_\n",
+    "grid_model_rf.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
   },
   {
    "cell_type": "code",
