interim running halving grid on random forest

--- a/src/classification_halvinggrid.ipynb
+++ b/src/classification_halvinggrid.ipynb
@@ -1068,7 +1068,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.004986763000488281 seconds ---\n"
+      "--- 0.0029921531677246094 seconds ---\n"
      ]
     }
    ],
@@ -1146,7 +1146,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0019943714141845703 seconds ---\n"
+      "--- 0.0009980201721191406 seconds ---\n"
      ]
     }
    ],
@@ -1354,6 +1354,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n_iterations: 3\n",
+      "n_required_iterations: 11\n",
+      "n_possible_iterations: 3\n",
+      "min_resources_: 20\n",
+      "max_resources_: 275\n",
+      "aggressive_elimination: False\n",
+      "factor: 3\n",
+      "----------\n",
+      "iter: 0\n",
+      "n_candidates: 83160\n",
+      "n_resources: 20\n",
       "Fitting 5 folds for each of 83160 candidates, totalling 415800 fits\n"
      ]
     }
