--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -1158,7 +1158,8 @@
     "\n",
     "#### Scaled Data without PCA: Logistic Regression, Random Forest, XGBoost\n",
     "> - Logistic Regression: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
-    "> - Random Foreat: https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n"
+    "> - Random Foreat: https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "> - XGBoost: https://towardsdatascience.com/binary-classification-xgboost-hyperparameter-tuning-scenarios-by-non-exhaustive-grid-search-and-c261f4ce098d\n"
    ]
   },
   {
@@ -1274,7 +1275,7 @@
     "# Create param grid.\n",
     "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0]\n",
     "\n",
-    "param_grid = [\n",
+    "param_grid_lg = [\n",
     "    {'classifier__penalty' : ['l1', 'l2'],\n",
     "    'classifier__C' : param_range,\n",
     "     'classifier__max_iter': [50, 100, 150, 200, 250],\n",
@@ -1283,7 +1284,7 @@
     "]\n",
     "\n",
     "# Create grid search object\n",
-    "grid_model_lg = GridSearchCV(pipe_lg, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "grid_model_lg = GridSearchCV(pipe_lg, param_grid = param_grid_lg, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
     "\n",
     "# Fit on data\n",
     "grid_model_lg.fit(X_train2, y_train2)\n",
@@ -1330,17 +1331,15 @@
     "pipe_rf = Pipeline([('classifier' , RandomForestClassifier())])\n",
     "\n",
     "# Create param grid.\n",
-    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0]\n",
-    "\n",
     "param_grid_rf = [\n",
     "    {'classifier__n_estimators': \n",
     "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
     "    'classifier__criterion' : ['gini', 'entropy'],\n",
-    "     'classifier__max_features': ['auto', 'sqrt', 'log2'],\n",
+    "     'classifier__max_features': ['auto', 'sqrt'],\n",
     "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)],\n",
     "     'classifier__min_samples_split': [2, 5, 10],\n",
     "     'classifier__min_samples_leaf': [1, 2, 4],\n",
-    "     'classifier__random_state': [5, 10, 20, 30, 40, 50, 80],\n",
+    "     #'classifier__random_state': [5, 10, 20, 30, 40, 50, 80],\n",
     "    'classifier__bootstrap' : [True, False]}\n",
     "]\n",
     "\n",
@@ -1371,12 +1370,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5d0f7ca-fa23-459f-93fc-a34d96a3a3e4",
+   "cell_type": "markdown",
+   "id": "5270fbc1-f42b-453e-8d79-4c3ae87a3900",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Test 3: XGBoost"
+   ]
   },
   {
    "cell_type": "code",
@@ -1384,7 +1383,40 @@
    "id": "c3761d46-3c6d-4ee0-b7fc-3eaf3d03de8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "pipe_xgb = Pipeline([('classifier' , XGBClassifier())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_xgb = [\n",
+    "        {'classifier__gamma': [0,0.1,0.2,0.4,0.8,1.6,3.2,6.4,12.8,25.6,51.2,102.4, 200],\n",
+    "        'classifier__learning_rate': [0.01, 0.03, 0.06, 0.1, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5, 0.6, 0.7],\n",
+    "        'classifier__max_depth': [5,6,7,8,9,10,11,12,13,14],\n",
+    "        'classifier__n_estimators': [50,65,80,100,115,130,150],\n",
+    "        'classifier_reg_alpha': [0,0.1,0.2,0.4,0.8,1.6,3.2,6.4,12.8,25.6,51.2,102.4,200],\n",
+    "        'classifier__reg_lambda': [0,0.1,0.2,0.4,0.8,1.6,3.2,6.4,12.8,25.6,51.2,102.4,200]}\n",
+    "                ]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_xgb = GridSearchCV(pipe_xgb, param_grid = param_grid_xgb, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_xgb.fit(X_train2, y_train2)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_xgb.best_params_\n",
+    "grid_model_xgb.best_index_\n",
+    "grid_model_xgb.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_xgb.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
   },
   {
    "cell_type": "code",
