--- a/src/classification_halvinggrid.ipynb
+++ b/src/classification_halvinggrid.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4d137b96-1ae2-4820-bca1-75f39fd21bfc",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "[344 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1020,7 +1020,7 @@
        "[100 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dffd84d8-8189-44a0-a128-93c23cebd4c9",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0029921531677246094 seconds ---\n"
+      "--- 0.0029926300048828125 seconds ---\n"
      ]
     }
    ],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "92b80f78-4b8b-4ce5-9703-3b85480f1ae5",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0029921531677246094 seconds ---\n"
+      "--- 0.009993314743041992 seconds ---\n"
      ]
     }
    ],
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fc8d0e10-0b68-4226-b9c4-9f6ba0636f5e",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0009980201721191406 seconds ---\n"
+      "--- 0.0013484954833984375 seconds ---\n"
      ]
     }
    ],
@@ -1172,7 +1172,8 @@
     "\n",
     "#### Scaled Data without PCA: Logistic Regression, Random Forest, XGBoost\n",
     "> - Logistic Regression: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\n",
-    "> - Random Foreat: https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n"
+    "> - Random Foreat: https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
+    "> - XGBoost: https://towardsdatascience.com/binary-classification-xgboost-hyperparameter-tuning-scenarios-by-non-exhaustive-grid-search-and-c261f4ce098d\n"
    ]
   },
   {
@@ -1310,7 +1311,7 @@
     "# Create param grid.\n",
     "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0]\n",
     "\n",
-    "param_grid = [\n",
+    "param_grid_lg = [\n",
     "    {'classifier__penalty' : ['l1', 'l2'],\n",
     "    'classifier__C' : param_range,\n",
     "     'classifier__max_iter': [50, 100, 150, 200, 250],\n",
@@ -1319,7 +1320,7 @@
     "]\n",
     "\n",
     "# Create grid search object\n",
-    "grid_model_lg = HalvingGridSearchCV(pipe_lg, param_grid = param_grid, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "grid_model_lg = HalvingGridSearchCV(pipe_lg, param_grid = param_grid_lg, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
     "\n",
     "# Fit on data\n",
     "grid_model_lg.fit(X_train2, y_train2)\n",
@@ -1355,7 +1356,7 @@
      "output_type": "stream",
      "text": [
       "n_iterations: 3\n",
-      "n_required_iterations: 11\n",
+      "n_required_iterations: 9\n",
       "n_possible_iterations: 3\n",
       "min_resources_: 20\n",
       "max_resources_: 275\n",
@@ -1363,9 +1364,9 @@
       "factor: 3\n",
       "----------\n",
       "iter: 0\n",
-      "n_candidates: 83160\n",
+      "n_candidates: 7920\n",
       "n_resources: 20\n",
-      "Fitting 5 folds for each of 83160 candidates, totalling 415800 fits\n"
+      "Fitting 5 folds for each of 7920 candidates, totalling 39600 fits\n"
      ]
     }
    ],
@@ -1377,17 +1378,15 @@
     "pipe_rf = Pipeline([('classifier' , RandomForestClassifier())])\n",
     "\n",
     "# Create param grid.\n",
-    "param_range = [0.0001, 0.001, 0.01, 0.1, 1.0, 10.0, 100.0]\n",
-    "\n",
     "param_grid_rf = [\n",
     "    {'classifier__n_estimators': \n",
     "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
     "    'classifier__criterion' : ['gini', 'entropy'],\n",
-    "     'classifier__max_features': ['auto', 'sqrt', 'log2'],\n",
+    "     'classifier__max_features': ['auto', 'sqrt'],\n",
     "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)],\n",
     "     'classifier__min_samples_split': [2, 5, 10],\n",
     "     'classifier__min_samples_leaf': [1, 2, 4],\n",
-    "     'classifier__random_state': [5, 10, 20, 30, 40, 50, 80],\n",
+    "     #'classifier__random_state': [5, 10, 20, 30, 40, 50, 80],\n",
     "    'classifier__bootstrap' : [True, False]}\n",
     "]\n",
     "\n",
@@ -1418,12 +1417,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5d0f7ca-fa23-459f-93fc-a34d96a3a3e4",
+   "cell_type": "markdown",
+   "id": "6b69aa95-e9e5-459b-a0e4-f9d7fc1544e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Test 3: XGBoost"
+   ]
   },
   {
    "cell_type": "code",
@@ -1431,7 +1430,40 @@
    "id": "c3761d46-3c6d-4ee0-b7fc-3eaf3d03de8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "pipe_xgb = Pipeline([('classifier' , XGBClassifier())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_xgb = [\n",
+    "        {'classifier__gamma': [0,0.1,0.2,0.4,0.8,1.6,3.2,6.4,12.8,25.6,51.2,102.4, 200],\n",
+    "        'classifier__learning_rate': [0.01, 0.03, 0.06, 0.1, 0.15, 0.2, 0.25, 0.3, 0.4, 0.5, 0.6, 0.7],\n",
+    "        'classifier__max_depth': [5,6,7,8,9,10,11,12,13,14],\n",
+    "        'classifier__n_estimators': [50,65,80,100,115,130,150],\n",
+    "        'classifier_reg_alpha': [0,0.1,0.2,0.4,0.8,1.6,3.2,6.4,12.8,25.6,51.2,102.4,200],\n",
+    "        'classifier__reg_lambda': [0,0.1,0.2,0.4,0.8,1.6,3.2,6.4,12.8,25.6,51.2,102.4,200]}\n",
+    "                ]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_xgb = HalvingGridSearchCV(pipe_xgb, param_grid = param_grid_xgb, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_xgb.fit(X_train2, y_train2)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_xgb.best_params_\n",
+    "grid_model_xgb.best_index_\n",
+    "grid_model_xgb.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_xgb.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
   },
   {
    "cell_type": "code",
