set up grid&halving grid for svc & sgd

--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -1429,30 +1429,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d3d385-1d30-4de3-89ad-ade570924632",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40f32fa5-1a49-49b1-b867-75a7938a8b6e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14979569-3fe6-412e-8087-a8ae4d2f07a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c718a7f9-1805-4fcf-b105-697e6b2942ba",
    "metadata": {},
    "outputs": [],
@@ -1473,16 +1449,23 @@
    "source": [
     "### __2nd Set - GridSearchCV:__\n",
     "\n",
-    "#### Data pipeline scaling & PCA: SVC, SGD"
+    "#### Data pipeline scaling & PCA: SVC, SGD\n",
+    "> - SVC:\n",
+    "    * https://towardsdatascience.com/hyperparameter-tuning-for-support-vector-machines-c-and-gamma-parameters-6a5097416167\n",
+    "    * https://www.kaggle.com/code/udaysa/svm-with-scikit-learn-svm-with-parameter-tuning/notebook\n",
+    "\n",
+    "> - SGD:\n",
+    "    * https://scikit-learn.org/stable/modules/sgd.html\n",
+    "    * https://towardsdatascience.com/how-to-make-sgd-classifier-perform-as-well-as-logistic-regression-using-parfit-cc10bca2d3c4"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8df49bf-fa46-4dc4-b8a1-674e96d6ebc7",
+   "cell_type": "markdown",
+   "id": "1e49ce36-4af4-494c-99da-3554d1c768a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Test 1: SVC"
+   ]
   },
   {
    "cell_type": "code",
@@ -1490,7 +1473,41 @@
    "id": "3903baf4-5270-409d-a921-774188d9b4db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "svc = SVC()\n",
+    "pipe_svc = Pipeline([('scale', MinMaxScaler()),\n",
+    "                    ('pca', PCA(n_components=3)),\n",
+    "                    ('model', svc)])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_svc = [{'kernel': ['rbf'], 'gamma': [1e-2, 1e-3, 1e-4, 1e-5],\n",
+    "                     'C': [0.001, 0.10, 0.1, 10, 25, 50, 100, 1000]},\n",
+    "                    {'kernel': ['sigmoid'], 'gamma': [1e-2, 1e-3, 1e-4, 1e-5],\n",
+    "                     'C': [0.001, 0.10, 0.1, 10, 25, 50, 100, 1000]},\n",
+    "                    {'kernel': ['linear'], 'C': [0.001, 0.10, 0.1, 10, 25, 50, 100, 1000]}\n",
+    "                   ]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_svc = GridSearchCV(pipe_svc, param_grid = param_grid_svc, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_svc.fit(X_train, y_train)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_svc.best_params_\n",
+    "grid_model_svc.best_index_\n",
+    "grid_model_svc.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_svc.score(X_train, y_train)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1501,12 +1518,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5e936ba-3680-4d29-8b23-ff508d669452",
+   "cell_type": "markdown",
+   "id": "eaa61a67-f5b2-4ecc-a8a8-144c65d5a096",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Test 2: SGD"
+   ]
   },
   {
    "cell_type": "code",
@@ -1514,7 +1531,42 @@
    "id": "6bee7982-0811-4231-b886-c576e8255b01",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "sgd = SGDClassifier()\n",
+    "pipe_sgd = Pipeline([('scale', MinMaxScaler()),\n",
+    "                    ('pca', PCA(n_components=3)),\n",
+    "                    ('model', sgd)])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_sgd = {\n",
+    "    'alpha': [1e-4, 1e-3, 1e-2, 1e-1, 1e0, 1e1, 1e2, 1e3], # learning rate\n",
+    "    'n_iter': [1000], # number of epochs\n",
+    "    'loss': ['log'], # logistic regression,\n",
+    "    'penalty': ['l2'],\n",
+    "    'n_jobs': [-1]\n",
+    "}\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_sgd = GridSearchCV(pipe_sgd, param_grid = param_grid_sgd, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_sgd.fit(X_train, y_train)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_sgd.best_params_\n",
+    "grid_model_sgd.best_index_\n",
+    "grid_model_sgd.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_sgd.score(X_train, y_train)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
   },
   {
    "cell_type": "code",
