trial2 - halving grid & grid on random forest

--- a/src/classification_halvinggrid.ipynb
+++ b/src/classification_halvinggrid.ipynb
@@ -1068,7 +1068,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.003992795944213867 seconds ---\n"
+      "--- 0.0049877166748046875 seconds ---\n"
      ]
     }
    ],
@@ -1114,7 +1114,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0020132064819335938 seconds ---\n"
+      "--- 0.0029931068420410156 seconds ---\n"
      ]
     }
    ],
@@ -1146,7 +1146,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0015339851379394531 seconds ---\n"
+      "--- 0.000997781753540039 seconds ---\n"
      ]
     }
    ],
@@ -1465,6 +1465,152 @@
     "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
     "    'classifier__criterion' : ['gini', 'entropy'],\n",
     "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)]}\n",
+    "]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_rf = HalvingGridSearchCV(pipe_rf, param_grid = param_grid_rf, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_rf.fit(X_train2, y_train2)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.best_params_\n",
+    "grid_model_rf.best_index_\n",
+    "grid_model_rf.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bf4134b6-542d-4d6b-a4d0-0147132ce5a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_iterations: 3\n",
+      "n_required_iterations: 7\n",
+      "n_possible_iterations: 3\n",
+      "min_resources_: 20\n",
+      "max_resources_: 275\n",
+      "aggressive_elimination: False\n",
+      "factor: 3\n",
+      "----------\n",
+      "iter: 0\n",
+      "n_candidates: 1320\n",
+      "n_resources: 20\n",
+      "Fitting 5 folds for each of 1320 candidates, totalling 6600 fits\n",
+      "----------\n",
+      "iter: 1\n",
+      "n_candidates: 440\n",
+      "n_resources: 60\n",
+      "Fitting 5 folds for each of 440 candidates, totalling 2200 fits\n",
+      "----------\n",
+      "iter: 2\n",
+      "n_candidates: 147\n",
+      "n_resources: 180\n",
+      "Fitting 5 folds for each of 147 candidates, totalling 735 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HalvingGridSearchCV(estimator=Pipeline(steps=[('classifier',\n",
+       "                                               RandomForestClassifier())]),\n",
+       "                    n_jobs=-1,\n",
+       "                    param_grid=[{'classifier__criterion': ['gini', 'entropy'],\n",
+       "                                 'classifier__max_depth': [10, 20, 30, 40, 50,\n",
+       "                                                           60, 70, 80, 90, 100,\n",
+       "                                                           110],\n",
+       "                                 'classifier__max_features': ['auto', 'sqrt'],\n",
+       "                                 'classifier__min_samples_leaf': [1, 2, 4],\n",
+       "                                 'classifier__n_estimators': [200, 400, 600,\n",
+       "                                                              800, 1000, 1200,\n",
+       "                                                              1400, 1600, 1800,\n",
+       "                                                              2000]}],\n",
+       "                    scoring='f1', verbose=True)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__criterion': 'gini',\n",
+       " 'classifier__max_depth': 70,\n",
+       " 'classifier__max_features': 'auto',\n",
+       " 'classifier__min_samples_leaf': 1,\n",
+       " 'classifier__n_estimators': 800}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1793"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9611721611721613"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "--- 1876.9522891044617 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "pipe_rf = Pipeline([('classifier' , RandomForestClassifier())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_rf = [\n",
+    "    {'classifier__n_estimators': \n",
+    "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
+    "    'classifier__criterion' : ['gini', 'entropy'],\n",
+    "     'classifier__max_features': ['auto', 'sqrt'],\n",
+    "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)],\n",
+    "    'classifier__min_samples_leaf': [1, 2, 4]}\n",
     "]\n",
     "\n",
     "# Create grid search object\n",
