--- a/src/classification_gridsearch.ipynb
+++ b/src/classification_gridsearch.ipynb
@@ -1054,7 +1054,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.003989696502685547 seconds ---\n"
+      "--- 0.003023862838745117 seconds ---\n"
      ]
     }
    ],
@@ -1100,7 +1100,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.009271860122680664 seconds ---\n"
+      "--- 0.0019843578338623047 seconds ---\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
      "text": [
       "\n",
       "\n",
-      "--- 0.0009832382202148438 seconds ---\n"
+      "--- 0.000997304916381836 seconds ---\n"
      ]
     }
    ],
@@ -1307,6 +1307,165 @@
    "metadata": {},
    "source": [
     "#### Test 2: Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "026dcac2-0de6-468b-bc38-04c34b6f0a34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 220 candidates, totalling 1100 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=Pipeline(steps=[('classifier',\n",
+       "                                        RandomForestClassifier())]),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid=[{'classifier__criterion': ['gini', 'entropy'],\n",
+       "                          'classifier__max_depth': [10, 20, 30, 40, 50, 60, 70,\n",
+       "                                                    80, 90, 100, 110],\n",
+       "                          'classifier__n_estimators': [200, 400, 600, 800, 1000,\n",
+       "                                                       1200, 1400, 1600, 1800,\n",
+       "                                                       2000]}],\n",
+       "             scoring='f1', verbose=True)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__criterion': 'entropy',\n",
+       " 'classifier__max_depth': 10,\n",
+       " 'classifier__n_estimators': 400}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "111"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9716543535781286"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "--- 243.852787733078 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "pipe_rf = Pipeline([('classifier' , RandomForestClassifier())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_rf = [\n",
+    "    {'classifier__n_estimators': \n",
+    "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
+    "    'classifier__criterion' : ['gini', 'entropy'],\n",
+    "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)]}\n",
+    "]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_rf = GridSearchCV(pipe_rf, param_grid = param_grid_rf, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_rf.fit(X_train2, y_train2)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.best_params_\n",
+    "grid_model_rf.best_index_\n",
+    "grid_model_rf.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90ae3c4b-f93f-4d2c-9f12-0d42052d6cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start time to measure the time of the program execution\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# Create first pipeline for base.\n",
+    "pipe_rf = Pipeline([('classifier' , RandomForestClassifier())])\n",
+    "\n",
+    "# Create param grid.\n",
+    "param_grid_rf = [\n",
+    "    {'classifier__n_estimators': \n",
+    "     [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
+    "    'classifier__criterion' : ['gini', 'entropy'],\n",
+    "     'classifier__max_features': ['auto', 'sqrt'],\n",
+    "    'classifier__max_depth' : [int(x) for x in np.linspace(10, 110, num = 11)],\n",
+    "    'classifier__min_samples_leaf': [1, 2, 4]}\n",
+    "]\n",
+    "\n",
+    "# Create grid search object\n",
+    "grid_model_rf = GridSearchCV(pipe_rf, param_grid = param_grid_rf, cv = 5, verbose=True, n_jobs=-1, scoring='f1')\n",
+    "\n",
+    "# Fit on data\n",
+    "grid_model_rf.fit(X_train2, y_train2)\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.best_params_\n",
+    "grid_model_rf.best_index_\n",
+    "grid_model_rf.best_score_\n",
+    "\n",
+    "# find best model score\n",
+    "grid_model_rf.score(X_train2, y_train2)\n",
+    "\n",
+    "# print the overall program runtime.\n",
+    "print(f\"\\n\\n--- {(time.time() - start_time)} seconds ---\")"
    ]
   },
   {
